Add prompt for exercises

--- a/Module2_datatypes_solutions.ipynb
+++ b/Module2_datatypes_solutions.ipynb
@@ -81,7 +81,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 1 solution</font>  "
+        "<font color='red'>Exercise 1 solution</font>  \n",
+        "The number of continents on Earth multiplied by the number of planets in our solar system (sorry Pluto):"
       ],
       "metadata": {
         "id": "udvAFi97LKhe"
@@ -104,7 +105,8 @@
         "id": "8cfuDGcAHWYJ"
       },
       "source": [
-        "<font color='red'>Exercise 2 solution</font>  "
+        "<font color='red'>Exercise 2 solution</font>  \n",
+        "This Module's number, cubed (to the power of 3)"
       ]
     },
     {
@@ -124,7 +126,8 @@
         "id": "x2BQMOPPHYtW"
       },
       "source": [
-        "<font color='red'>Exercise 3 solution</font>  \n",
+        "<font color='red'>Exercise 3 solution</font>   \n",
+        "The current year divided by 100  \n",
         "Note: Year may be different"
       ]
     },
@@ -147,10 +150,10 @@
       "source": [
         "<font color='red'>Exercise 4 solution</font>  \n",
         "Run the cells to see the output. Output is:  \n",
-        "`3`  \n",
-        "`3`  \n",
-        "`3.0`  \n",
-        "`3.0`"
+        "`2 + 1`: `3` (int)  \n",
+        "`3 * 1`: `3` (int)  \n",
+        "`1.5 * 2`: `3.0` (float)  \n",
+        "`9 / 3`: `3.0` (float)"
       ]
     },
     {
@@ -159,7 +162,8 @@
         "id": "qDHEh4quIJH-"
       },
       "source": [
-        "<font color='red'>Exercise 5 solution</font>  "
+        "<font color='red'>Exercise 5 solution</font>  \n",
+        "Add parentheses to the expression below to help clarify the order of operations, ensuring that your answer is still 24."
       ]
     },
     {
@@ -179,7 +183,8 @@
         "id": "ClVVERidDcqy"
       },
       "source": [
-        "<font color='red'>Exercise 6 solution</font>   "
+        "<font color='red'>Exercise 6 solution</font>   \n",
+        "Write code to determine the absolute value of the difference between two children's ages (10 and 15)"
       ]
     },
     {
@@ -199,7 +204,8 @@
         "id": "M3Topg-PIuHI"
       },
       "source": [
-        "<font color='red'>Exercise 7 solution</font>  "
+        "<font color='red'>Exercise 7 solution</font>  \n",
+        "Determine the lowest student grade received on a quiz: 76, 98, 83, 71 "
       ]
     },
     {
@@ -219,7 +225,8 @@
         "id": "06y0jguwIx_U"
       },
       "source": [
-        "<font color='red'>Exercise 8 solution</font>   "
+        "<font color='red'>Exercise 8 solution</font>   \n",
+        "Determine the highest price of a cup of coffee: 2.50, 3.49, 2.99"
       ]
     },
     {
@@ -240,7 +247,7 @@
       },
       "source": [
         "<font color='red'>Exercise 9 solution</font>  \n",
-        "Run the cell. The output is `True`."
+        "Run the cell (`2 * max(14, 3, 9, 17, 11) == 7 + 3 * 9`). The output is `True`."
       ]
     },
     {
@@ -249,7 +256,8 @@
         "id": "ZQQkuFBXFSKw"
       },
       "source": [
-        "<font color='red'>Exercise 10 solution</font>  "
+        "<font color='red'>Exercise 10 solution</font>  \n",
+        "Write the Boolean expression for 3 squared plus 4 is equivalent to 25 minus 12."
       ]
     },
     {
@@ -269,7 +277,8 @@
         "id": "fLgIYYNmJjDC"
       },
       "source": [
-        "<font color='red'>Exercise 11 solution</font>  "
+        "<font color='red'>Exercise 11 solution</font>  \n",
+        "Write the Boolean expression for the minimum age among four siblings (14, 9, 7, 2) is less than 3"
       ]
     },
     {
@@ -290,6 +299,7 @@
       },
       "source": [
         "<font color='red'>Exercise 12 possible solutions</font>  \n",
+        "Come up with your choice of Boolean statements for the `and`, `or`, and `not` operators.  \n",
         "Note: There are a nearly infinite number of possibilities for these exercises, but here are possible solutions for each."
       ]
     },
