Add prompt ti exercises

--- a/Module3_variables_solutions.ipynb
+++ b/Module3_variables_solutions.ipynb
@@ -77,7 +77,7 @@
       "source": [
         "## 2. Assigning values to variables \n",
         "<font color='red'>Exercise 1 solution</font>  \n",
-        "Middle cell returns an error"
+        "Middle cell returns an error."
       ]
     },
     {
@@ -119,7 +119,8 @@
         "id": "aw04Rfc2pisf"
       },
       "source": [
-        "<font color='red'>Exercise 2 solution</font>  "
+        "<font color='red'>Exercise 2 solution</font>  \n",
+        "Write your own code to print the value assigned to `age`, and run the cell."
       ]
     },
     {
@@ -140,6 +141,7 @@
       },
       "source": [
         "<font color='red'>Exercise 3 solution</font>  \n",
+        "Create a variable `fav_num` and assign to it your favorite number between 1-100. Then, on line 2, print the value assigned to this variable.  \n",
         "Note: Of course, you may have a different favorite number, but the rest of the solution should be the same."
       ]
     },
@@ -167,6 +169,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "age = 20\n",
+        "print(age)\n",
+        "age = 21\n",
+        "print(age)"
+      ],
+      "metadata": {
+        "id": "bk3PokysU3Hp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "M7MtuOIKArd_"
@@ -178,12 +194,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "shoe_size = 8\n",
+        "2 * shoe_size"
+      ],
+      "metadata": {
+        "id": "wl7mR5QcU-KL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "5cWnQOzpBHn-"
       },
       "source": [
-        "<font color='red'>Exercise 6 solution</font>  "
+        "<font color='red'>Exercise 6 solution</font>  \n",
+        "Write code that will divide the variable `fav_num` by 3.14."
       ]
     },
     {
@@ -203,7 +232,8 @@
         "id": "6WXwIlFQuQ9z"
       },
       "source": [
-        "<font color='red'>Exercise 7 solution</font>  "
+        "<font color='red'>Exercise 7 solution</font>  \n",
+        "Next, write code that will determine whether the value assigned to `fav_num` is equivalent to 84."
       ]
     },
     {
@@ -229,6 +259,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "stat 101 = 35"
+      ],
+      "metadata": {
+        "id": "y5PsCFNKVu2q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stat_101 = 35"
+      ],
+      "metadata": {
+        "id": "xx4c184iVvSh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "101_stat = 35"
+      ],
+      "metadata": {
+        "id": "nv7S67hZVwwh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stat-101 = 35"
+      ],
+      "metadata": {
+        "id": "n86v1CeaVzLd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wKghlTEtJm0o"
@@ -236,6 +310,7 @@
       "source": [
         "## 7. General naming tips  \n",
         "<font color='red'>Exercise 9 possible solution</font>  \n",
+        "Below, assign the value 42 to your chosen variable name (a score for player 1). \n",
         "Note: There are many possible correct solutions to this exercise. As long as you've used a short and meaningful variable name and running the cell does not return a SyntaxError, it's correct!"
       ]
     },
@@ -257,7 +332,8 @@
       },
       "source": [
         "## 8. Be warned: Python is literal\n",
-        "<font color='red'>Exercise 10 possible solutions</font>  "
+        "<font color='red'>Exercise 10 possible solutions</font>  \n",
+        "Using your variable name from Exercise 9 (relating to the player's score), write an expression using this variable name in which you increase the player's score by 10 points (i.e., add 10). In the first cell, write the variable name correctly. In the second cell, try changing the capitalization of one letter to see what a NameError looks like.  "
       ]
     },
     {
