Add prompt to exercise solutions

--- a/Module4_strings_solutions.ipynb
+++ b/Module4_strings_solutions.ipynb
@@ -75,12 +75,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "type(2000)"
+      ],
+      "metadata": {
+        "id": "CtVAz_4qWuCe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(3.14 * 2)"
+      ],
+      "metadata": {
+        "id": "oz56fBcIWylP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(False)"
+      ],
+      "metadata": {
+        "id": "YyXxMPOFWwlR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 6 * 4\n",
+        "type(a)"
+      ],
+      "metadata": {
+        "id": "CE33yHsTWu1h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "xteTOWiezweK"
       },
       "source": [
-        "<font color='red'>Exercise 2 solution</font>  "
+        "<font color='red'>Exercise 2 solution</font>  \n",
+        "Use the `type()` function to determine the data type for the value assigned to `answer`."
       ]
     },
     {
@@ -102,7 +148,8 @@
       },
       "source": [
         "## 4. String basics  \n",
-        "<font color='red'>Exercise 3 solutions</font>  "
+        "<font color='red'>Exercise 3 solutions</font>   \n",
+        "Use the `type()` function on the values in the cells below. In other words, put the values below inside the parentheses of the `type()` function."
       ]
     },
     {
@@ -129,12 +176,35 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "zy7jO8dtuYr7"
-      },
       "source": [
-        "You received your first Type Error! Type Errors indicate that you've attempted to perform an operation that isn't allowed for that data type. In this case, you can't perform the same operations on strings as you do floats."
-      ]
+        "<font color='red'>Exercise 4</font>  \n",
+        "Run both of the cells below to see that you'll receive a TypeError when you try to divide a string in the second cell."
+      ],
+      "metadata": {
+        "id": "7xtkQnEcXrMd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "13.2 / 2"
+      ],
+      "metadata": {
+        "id": "_PZTIcUsX8IZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'13.2' / 2"
+      ],
+      "metadata": {
+        "id": "8gFv93T-X8iV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -143,6 +213,7 @@
       },
       "source": [
         "<font color='red'>Exercise 5 possible solution</font>  \n",
+        "Assign the variable `fav_drink` the name of your favorite type of drink (coffee, tea, boba, etc.), but don't use quotes around the drink name. Run the cell and see what happens.  \n",
         "Note: You may have a different favorite drink, but there should not be quote marks surrounding it (the intention of this exercise is to get a NameError)."
       ]
     },
@@ -164,7 +235,8 @@
       },
       "source": [
         "## 5. Printing strings  \n",
-        "<font color='red'>Exercise 6 solution</font>  "
+        "<font color='red'>Exercise 6 solution</font>  \n",
+        "Insert a new line beneath the string and use the `print()` function to print `econ`. Note the difference between the input (with quotes) and output (no quotes)."
       ]
     },
     {
@@ -193,12 +265,48 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# assign a value\n",
+        "my_string = 'hello'"
+      ],
+      "metadata": {
+        "id": "M2O1OehdYjyQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test for equality\n",
+        "my_string == 'hello'"
+      ],
+      "metadata": {
+        "id": "cLg3bSDcYlVz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test for inequality\n",
+        "my_string != 'hello'"
+      ],
+      "metadata": {
+        "id": "ar5VCCxHYoEO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "d0gjyNkqvHsv"
       },
       "source": [
-        "<font color='red'>Exercise 8 possible solutions</font>   \n",
+        "<font color='red'>Exercise 8 possible solutions</font>   In the cell below, create the variable `fav_band1` and assign it a string of your current favorite band. In the same cell, start a new line and create the variable `fav_band2`, then assign it the name of your favorite band when you were in middle school.  \n",
         "Note: Your favorite bands may be different, but the structure of the solution should be the same as below."
       ]
     },
@@ -235,7 +343,8 @@
         "id": "s1qny-WHvRkW"
       },
       "source": [
-        "<font color='red'>Exercise 9 solution</font>  "
+        "<font color='red'>Exercise 9 solution</font>  \n",
+        "Below, write code to determine whether `dog` is equivalent to `Dog`. "
       ]
     },
     {
@@ -257,6 +366,7 @@
       "source": [
         "## 7. Comparison operators: Less than and greater than  \n",
         "<font color='red'>Exercise 10 possible solution</font>  \n",
+        "Create the variable `fav_book` and assign it the value of your favorite book. In the same cell, start a new line and create the variable `fav_movie`, and then assign it the value of your favorite movie.  \n",
         "Note: Your favorite book and movie may be different, but the structure of the solution should be the same as below."
       ]
     },
