Add prompt to exercise solutions

--- a/Module5_string_operations_solutions.ipynb
+++ b/Module5_string_operations_solutions.ipynb
@@ -72,9 +72,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "str1 = 'hello'\n",
+        "str2 = 'world'\n",
+        "print(str1 + str2)\n",
+        "print(str1 + ' ' + str2)"
+      ],
+      "metadata": {
+        "id": "BQ6Jr_VOqsqh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 2 solution</font>"
+        "<font color='red'>Exercise 2 solution</font>  \n",
+        "Create the variable `pizza` and assign it the combined value of `top1` and `top2` such that they're printed with a space in-between. Finally, insert another new line and print `pizza` to check that your output is as expected."
       ],
       "metadata": {
         "id": "VQGAEav6gukx"
@@ -107,12 +122,28 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Integer first\n",
+        "print(2 * 'yo')\n",
+        "\n",
+        "# String first\n",
+        "print('yo' * 2)"
+      ],
+      "metadata": {
+        "id": "sz-yfnljq72w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "88Oti5uOtsUM"
       },
       "source": [
-        "<font color='red'>Exercise 4 solution</font> "
+        "<font color='red'>Exercise 4 solution</font>  \n",
+        "Write code that will print the following output: `ha ha ha ha ha `. In other words, 5 copies of the word `ha` separated by spaces."
       ]
     },
     {
@@ -138,9 +169,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "my_alphabet = 'abcdefghijkmnopqrstuvwxyz'\n",
+        "print('z' in my_alphabet)\n",
+        "print('l' not in my_alphabet)"
+      ],
+      "metadata": {
+        "id": "-CTeN06LrLRh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 6 solution</font> "
+        "<font color='red'>Exercise 6 solution</font>  \n",
+        "create the variable `yoda` and assign it this sentence as a string. Then, check whether the word `force` is part of the sentence."
       ],
       "metadata": {
         "id": "Simiwux3ijKE"
@@ -173,12 +218,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "greeting = \"Hi there\"\n",
+        "len(greeting)"
+      ],
+      "metadata": {
+        "id": "OelCQS4ErXIz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "farewell = 'Until then!'\n",
+        "len(farewell)"
+      ],
+      "metadata": {
+        "id": "FiU-9tQdrYsi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "time = 'See you at 8'\n",
+        "len(time)"
+      ],
+      "metadata": {
+        "id": "tnhKrsg5racW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "HLt-kH2utZg3"
       },
       "source": [
         "<font color='red'>Exercise 8 solution</font>  \n",
+        "Create the variable `school` and assign it the name of your institution as a string. In the same cell, insert a new line and determine the length of the string assigned to `school`. \n",
         "Your school name will be different, but the structure should be the same."
       ]
     },
@@ -202,7 +284,8 @@
       "source": [
         "## 5. Accessing individual characters in a string\n",
         "<font color='red'>Exercise 9 solution</font>  \n",
-        "Run the cell to see the output. The output is:  \n",
+        "Run the cell below to see a few more examples of using the indexing operator.\n",
+        "The output is:  \n",
         "`y`  \n",
         "` `  \n",
         "`!`\n",
@@ -211,12 +294,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "fact = 'Python is the best coding language!'\n",
+        "print(fact[1])\n",
+        "print(fact[6])\n",
+        "print(fact[34])"
+      ],
+      "metadata": {
+        "id": "XupFAw-Lr7gT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mt1QQmFztQSA"
       },
       "source": [
         "<font color='red'>Exercise 10 solution</font>  \n",
+        "Create the variable `birthplace` and assign it a short string that states where you were born.  \n",
         "Your string may be different but the structure should be the same. Remember that the first index is 0, and the fourth index is 3."
       ]
     },
@@ -240,7 +338,8 @@
       },
       "source": [
         "## 6. Negative indexing  \n",
-        "<font color='red'>Exercise 11 solution</font>"
+        "<font color='red'>Exercise 11 solution</font>  \n",
+        "Use negative indexing to determine the second to last character in the string from the last exercise."
       ]
     },
     {
