Add prompt to exercise solutions

--- a/Module6_lists_and_tuples_solutions.ipynb
+++ b/Module6_lists_and_tuples_solutions.ipynb
@@ -68,6 +68,10 @@
       "source": [
         "## 2. List basics  \n",
         "<font color='red'>Exercise 1 solution</font>  \n",
+        "* Create a list called `names` that contains several strings: Your first name, a family member's name, and an actor's first name. Note: given that these names are strings, you'll need to put quote marks around each individual name.\n",
+        "* Create a list called `odd_nums` that contains several integers, specifically, odd numbers between 1-10.\n",
+        "* Print each list.  \n",
+        "\n",
         "Names will be different, but solution should be the same."
       ]
     },
@@ -98,14 +102,33 @@
       "source": [
         "## 3. Operations with lists\n",
         "<font color='red'>Exercise 2 solution</font>   \n",
-        "Run the cell to see the output. Output is:  \n",
+        "Run the cell to see the output of `all_tops`. Output is:  \n",
         "`['oreos', 'chocolate sprinkles', 'caramel', 'peanuts']`"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "toppings1 = ['oreos', 'chocolate sprinkles']\n",
+        "toppings2 = ['caramel', 'peanuts']\n",
+        "all_tops = toppings1 + toppings2\n",
+        "print(all_tops)"
+      ],
+      "metadata": {
+        "id": "yQMzBUNPsokX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 3 solution</font>  \n",
+        "* Create the variable `common_pets` and assign it a list of three pets that are common in the US. Same note as above: given that these pet types are strings, you'll need to surround each pet with quote marks.\n",
+        "* Create the variable `uncommon_pets` and assign it a list of three less common pets. (Ditto about quote marks).\n",
+        "* Create the variable `all_pets` and assign it the concatenation of `common_pets` and `uncommon_pets`.\n",
+        "* Print `all_pets` to ensure that the new list looks like you expect it to.  \n",
+        "\n",
         "The pets may be different but the solution should be the same."
       ],
       "metadata": {
@@ -133,14 +156,27 @@
       },
       "source": [
         "<font color='red'>Exercise 4 solution</font>  \n",
-        "Run the cell to see the output. Output is:  \n",
+        "Run the cell to see the output of `double_tops`. Output is:  \n",
         "`['oreos', 'chocolate sprinkles', 'caramel', 'peanuts', 'oreos', 'chocolate sprinkles', 'caramel', 'peanuts']`"
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "double_tops = all_tops * 2\n",
+        "print(double_tops)"
+      ],
+      "metadata": {
+        "id": "ZUEgwyE-s-ny"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 5 solution</font>  "
+        "<font color='red'>Exercise 5 solution</font>  \n",
+        "Create a variable called `lots_of_pets` and assign it 5 copies of the `uncommon_pets` list from above. Print the new list. "
       ],
       "metadata": {
         "id": "ufV2bGCwDScu"
@@ -171,9 +207,28 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# list of numbers\n",
+        "prices = [2.99, 1.49, 9.99, 6.29]\n",
+        "print(max(prices))\n",
+        "\n",
+        "# list of strings\n",
+        "names = ['Natalia', 'Aurora', 'Isabella', 'Emilia']\n",
+        "print(min(names))"
+      ],
+      "metadata": {
+        "id": "PD4Cf9LetKSN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 7 solution</font> "
+        "<font color='red'>Exercise 7 solution</font>  \n",
+        "* Determine which of the pet types in `all_pets` appears latest in the alphabet. Print the result.\n",
+        "* Determine which of the numbers in `odd_nums` has the lowest value. Print the result."
       ],
       "metadata": {
         "id": "QIOkS8OfDbLl"
@@ -200,7 +255,8 @@
         "id": "vD90OxBwb1V7"
       },
       "source": [
-        "<font color='red'>Exercise 8 solution</font> "
+        "<font color='red'>Exercise 8 solution</font>  \n",
+        "Determine the sum of all the values in the `prices` list created in a previous exercise. Print the result."
       ]
     },
     {
@@ -220,7 +276,8 @@
         "id": "uwVGWU7Fb1V_"
       },
       "source": [
-        "<font color='red'>Exercise 9 solution</font> "
+        "<font color='red'>Exercise 9 solution</font>  \n",
+        "Determine the length of the list `lots_of_pets`. Print the result."
       ]
     },
     {
@@ -240,7 +297,9 @@
         "id": "H2igputGb1WD"
       },
       "source": [
-        "<font color='red'>Exercise 10 solution</font> "
+        "<font color='red'>Exercise 10 solution</font>  \n",
+        "* Determine whether `'turtle'` is in the list `all_pets`, and print the result\n",
+        "* Determine whether `'fudge'` is NOT in the list `all_tops`, and print the result"
       ]
     },
     {
@@ -269,6 +328,18 @@
         "`Isabella`  \n",
         "`Aurora`"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(names[2])\n",
+        "print(names[-3])"
+      ],
+      "metadata": {
+        "id": "GF1aEB3ot1MP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -313,13 +384,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# creating the list\n",
+        "words = ['cat', 'hat', 'bat']\n",
+        "print(words)\n",
+        "\n",
+        "# modifying the list\n",
+        "words[0] = 'mat'\n",
+        "print(words)"
+      ],
+      "metadata": {
+        "id": "RmuenFEjuL4u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Pq-__HMj4zRk"
       },
       "source": [
         "<font color='red'>Exercise 14 solution</font>  \n",
-        "The numbers may be different, but the structure should be the same\n"
+        "Create a list called `lucky_nums` with three integers of your choosing. Print the list. Then, modify the list by replacing the first integer, and print the list again.  \n",
+        "The numbers may be different, but the structure should be the same."
       ]
     },
     {
@@ -349,6 +438,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# creating the string\n",
+        "word = 'word'\n",
+        "print(word)\n",
+        "\n",
+        "# attempting to modify the string\n",
+        "word[-1] = 'k'\n",
+        "print(word)"
+      ],
+      "metadata": {
+        "id": "gK1agBxkuYgy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "w1Wj-XOVb1WX"
@@ -356,6 +462,11 @@
       "source": [
         "## 5. Tuples  \n",
         "<font color='red'>Exercise 16 solution</font>  \n",
+        "Start by creating `pres_tup` with the last names of the three most recent presidents. Then...\n",
+        "* Determine the max value of the tuple, printing the result\n",
+        "* Make a new list called `pres_double` that includes two copies of `pres_tup`, and then print the result\n",
+        "* Attempt to replace one of the names in `pres_tup` with your own last name.  \n",
+        "\n",
         "When you run the cell, you'll receive a TypeError for attempting to change a value in a tuple."
       ]
     },
@@ -368,7 +479,7 @@
         "# Create tuple\n",
         "pres_tup = ('Biden', 'Trump', 'Obama')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
