Add prompt to exercise solutions

--- a/Module7_dictionaries_solutions.ipynb
+++ b/Module7_dictionaries_solutions.ipynb
@@ -82,12 +82,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "students = {\n",
+        "    123456789: ['Potter', 'Harry'],\n",
+        "    987654321: ['Granger', 'Hermione'],\n",
+        "    101010101: ['Weasley', 'Ron']\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "sp9JPUICv2Jx"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 2 solution</font>  \n",
+        "Run the cells to see the output. Outputs are:  \n",
+        "`['Potter', 'Harry']`  \n",
+        "`['Weasley', 'Ron']`"
+      ],
+      "metadata": {
+        "id": "dg4QciknwDzf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students[123456789]"
+      ],
+      "metadata": {
+        "id": "iSooF4FtwCKn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students[101010101]"
+      ],
+      "metadata": {
+        "id": "7FbOMui6wRpD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3dqXtVVMiihJ"
       },
       "source": [
-        "<font color='red'>Exercise 2 possible solution</font>  \n",
+        "<font color='red'>Exercise 3 possible solution</font>  \n",
+        "Create a dictionary named `groceries` that contains **four** key:value pairings. \n",
+        "* Each key should be a 5-digit code (as an integer)\n",
+        "* Each value should be a list that contains two items: the product name (as a string) and price (as a float). So, for example, you might have a 5-digit code like 44809 that is associated with 'Cheerios' and a price of 3.29.  \n",
+        "\n",
         "Your keys and values will be different, but the structure should be maintained. Also, keys may be integers rather than strings (the quotes aren't necessary for the keys)."
       ]
     },
@@ -113,7 +166,8 @@
         "id": "ufJDn2jFrve4"
       },
       "source": [
-        "<font color='red'>Exercise 3 possible solution</font>  \n",
+        "<font color='red'>Exercise 4 possible solution</font>  \n",
+        "Choose a 5-digit code (i.e., choose a key), and use it to access the relevant value within your dictionary.  \n",
         "You should have put one of your keys within the square brackets and obtained the corresponding list of the item name and its price."
       ]
     },
@@ -140,24 +194,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0otJqwrjtBVu"
-      },
-      "source": [
-        "<font color='red'>Exercise 4 solution</font>  \n",
-        "Run the cells to see the output. Output is:  \n",
-        "`{123456789: ['Potter', 'Harry'], 987654321: ['Granger', 'Hermione'], 101010101: ['Weasley', 'Ron'], 135792468: ['Malfoy', 'Draco']}`"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1H9r1JJytLfy"
       },
       "source": [
         "<font color='red'>Exercise 5 solution</font>  \n",
-        "Run the cells to see the output. Output is:  \n",
-        "`{123456789: ['Potter', 'Harry'], 987654321: ['Granger', 'Hermione'], 101010101: ['Weasley', 'Ron'], 135792468: ['Malfoy', 'Drako']}`"
+        "Run the cell to see the output. Output is:  \n",
+        "`{123456789: ['Potter', 'Harry'],  \n",
+        "987654321: ['Granger', 'Hermione'],  \n",
+        "101010101: ['Weasley', 'Ron'],  \n",
+        "135792468: ['Malfoy', 'Drako']}`"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students[135792468] = ['Malfoy', 'Drako']\n",
+        "students"
+      ],
+      "metadata": {
+        "id": "7teOdm_aw-x3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -171,12 +229,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "students[135792468] = ['Malfoy', 'Draco']\n",
+        "students"
+      ],
+      "metadata": {
+        "id": "48VCX372xMkp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "K_PvWvgxvtyN"
       },
       "source": [
         "<font color='red'>Exercise 7 possible solutions</font>  \n",
+        "* Change the value associated with a key of your choosing such that the price increases. For example, rather than Cheerios costing 3.29, maybe they now cost 3.49.\n",
+        "* Then, type the name of the dictionary to ensure that the price has indeed changed. (Note: if the order of key-value pairs in your dictionary has changed since you first created it, don't worry! A dictionary's contents have no particular order.)  \n",
+        "\n",
         "Again, your keys and values will be different, but the structure of your solution should follow one of these two options:  \n",
         "Note: you could have also used positive indexing (index 1) for answer format 2."
       ]
@@ -214,6 +287,7 @@
       },
       "source": [
         "<font color='red'>Exercise 8 possible solutions</font>  \n",
+        "Create a new `key:value` pair using a 5-digit code of your choosing, the name of the product, and a price of your choosing. Type the name of your dictionary to ensure that this new pair was properly added.  \n",
         "Your keys may be integers rather than strings, and your price may be different, but the structure should match that below."
       ]
     },
@@ -244,7 +318,54 @@
         "id": "5m65OCTI4P88"
       },
       "source": [
-        "<font color='red'>Exercise 9 solution</font>  "
+        "<font color='red'>Exercise 9 solution</font>  \n",
+        "Run the cell to see the output. Output is:  \n",
+        "`True`  \n",
+        "`False`  \n",
+        "`4`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "123456789 in students"
+      ],
+      "metadata": {
+        "id": "ccIGxR91x4JB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "987654321 not in students"
+      ],
+      "metadata": {
+        "id": "jif1L8YGx4pm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(students)"
+      ],
+      "metadata": {
+        "id": "MGzlpoXQx55P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UE17W-Oe4WVx"
+      },
+      "source": [
+        "<font color='red'>Exercise 10 solution</font>  \n",
+        "Determine whether `kiwi` is a key in your dictionary: "
       ]
     },
     {
@@ -260,12 +381,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "UE17W-Oe4WVx"
-      },
       "source": [
-        "<font color='red'>Exercise 10 solution</font>  "
-      ]
+        "<font color='red'>Exercise 11 solution</font>  \n",
+        "How many `key:value` pairs are in your dictionary?"
+      ],
+      "metadata": {
+        "id": "gJPUNi87ySmw"
+      }
     },
     {
       "cell_type": "code",
