Removed solutions to exercises

--- a/Module12_data_visualization.ipynb
+++ b/Module12_data_visualization.ipynb
@@ -200,8 +200,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Regression plot of movie_df\n",
-        "movie_reg = sns.regplot(x = 'rotten_tom', y = 'metacritic', data = movies_df)"
+        "# Regression plot of movie_df\n"
       ],
       "metadata": {
         "id": "2UnfTSVqFRLu"
@@ -236,7 +235,7 @@
     {
       "cell_type": "code",
       "source": [
-        "movie_reg_teal = sns.regplot(x = 'rotten_tom', y = 'metacritic', data = movies_df, color = 'teal')"
+        "# New Regression plot with a custom color\n"
       ],
       "metadata": {
         "id": "lXi0kNW9EfZi"
@@ -396,7 +395,7 @@
     {
       "cell_type": "code",
       "source": [
-        "movie_hg_teal = sns.histplot(x = 'fandango', data = movies_df, color = 'teal', bins = 10)"
+        "# New Histogram with custom color and number of bins\n"
       ],
       "metadata": {
         "id": "rlU7mZOcRuJw"
@@ -453,8 +452,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Count plot with horizontal bars\n",
-        "job_horiz = sns.countplot(y = 'type_of_subject', data = biopics_df)"
+        "# Count plot with horizontal bars\n"
       ],
       "metadata": {
         "id": "JbeC-F60Uj-a"
