--- a/Module3_variables.ipynb
+++ b/Module3_variables.ipynb
@@ -415,7 +415,7 @@
         "\n",
         "\n",
         "#### <font color='blue'>Note:</font> Snake case  \n",
-        "Back to multi-part variable names, let's consider the example of `fav_num`. This underscore approach to multi-part variable names is called \"snake case\" and is the most common approach to variable naming in Python. To follow this approach, keep everything lowecase and simply insert underscores in place of spaces.\n",
+        "Back to multi-part variable names, let's consider the example of `fav_num`. This underscore approach to multi-part variable names is called \"snake case\" and is the most common approach to variable naming in Python. To follow this approach, keep everything lowercase and simply insert underscores in place of spaces.\n",
         "\n",
         "Other approaches include \"camel case\" (`myNum`) and \"Pascal case\" (`MyNum`), which both technically follow Python's naming rules but are not the preferred style.\n",
         "\n",
@@ -527,7 +527,7 @@
         "## 8. Be warned: Python is literal\n",
         "Python is like a calculator: it will do exactly what you tell it to do, not what you *want* it to do. It doesn't \"know what you meant to type\" and it doesn't autocorrect.\n",
         "\n",
-        "Back to our scneario regarding the number of states in the US... \n",
+        "Back to our scenario regarding the number of states in the US... \n",
         "\n",
         "Imagine that you created the variable `n_states` and assigned it the value 50. Python will complain if you later mistype the variable when trying to use in an expression. For example, all of the following would cause errors:\n",
         "\n",
