Clarified instructions in exercise 7 and 9

--- a/Module4_strings.ipynb
+++ b/Module4_strings.ipynb
@@ -436,7 +436,7 @@
         "<font color='red'>Exercise 9</font>  \n",
         "As is the case with variable names, spelling, pluralization, and capitalization are all important when it comes to strings.\n",
         "\n",
-        "Below, write code to determine whether `dog` is equivalent to `Dog`. What do you think the answer will be?"
+        "Below, write code to determine whether the string `dog` is equivalent to the string `Dog`. What do you think the answer will be?"
       ]
     },
     {
@@ -464,7 +464,7 @@
         "It might also help to think of 'a' as having the smallest value in the alphabet (1), and 'z' having the largest value (26).  \n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
-        "In the cell below, create the variable `fav_book` and assign it the value of your favorite book. In the same cell, start a new line and create the variable `fav_movie`, and then assign it the value of your favorite movie."
+        "In the cell below, create the variable `fav_book` and assign it your favorite book as a string. In the same cell, start a new line and create the variable `fav_movie`, and then assign it your favorite movie as a string."
       ]
     },
     {
